--- a/package.json
+++ b/package.json
@@ -6,16 +6,38 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.0",
+    "@tanstack/react-table": "^8.20.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "extract-colors": "^4.0.8",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.439.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-extract-colors": "^1.0.3",
+    "react-redux": "^9.1.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-palette-generator": "^0.7.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
+    "@types/extract-colors": "^1.1.4",
+    "@types/lodash": "^4.17.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.37",
     "@types/react-dom": "^18.2.18",
+    "@types/tinycolor2": "^1.4.6",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.3.3"
   }
 }
